--- a/data/users.yml
+++ b/data/users.yml
@@ -1,4 +1,4 @@
-- name: 'Sébastien Saunier'
-  github_nickname: 'ssaunier'
-- name: 'Boris Paillard'
-  github_nickname: 'Papillard'
+- name: 'Roman Cheprack'
+  github_nickname: 'romancheprack'
+- name: 'David Sellam'
+  github_nickname: 'dvd90'
